k8s/v1.30.4/manifests/kubernetes-dashboard/abc/kubernetes-dashboard/templates/networking/ingress.yaml
---
# Source: kubernetes-dashboard/templates/networking/ingress.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  labels:
    helm.sh/chart: kubernetes-dashboard-7.5.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kubernetes-dashboard
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: kubernetes-dashboard
spec:
  tls:
    - hosts:
      - localhost
      - dashboard.master.com
      - dashboard.maifuj.com
      secretName: release-name-kubernetes-dashboard-certs
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-kong-proxy
                port:
                  number: 443
    - host: dashboard.master.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-kong-proxy
                port:
                  number: 443
    - host: dashboard.maifuj.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-kong-proxy
                port:
                  number: 443
